style.css
body {
    background-color: #192A51;
    font-family: "Work Sans", Arial, sans-serif;
    line-height: 1.5;
    color: #F5E6E8;
}

nav {
    display: flex;
    justify-content: center;
    gap: 1em .75em;
    padding: 1em;
    flex-wrap: wrap;
}

/* Style the nav buttons */


nav a {
    display: inline-block;
    padding: 5px 10px;
    border: 1px solid black;
    display: inline;
    font-size: 25px;
    font-weight: 500;
    background-color: #AAA1C8;
    color: #F5E6E8;
    text-decoration: none;
    cursor: pointer;
    box-shadow: 1px 4px 7px #100b1d;
    border-radius: 10px;
}

nav a:hover {
    background-color: #967AA1;
}

nav a:active {
    
    box-shadow: inset 1px 4px 7px #231942;
    color: #192A51;
}

/* Styles the page header */

header {
    text-align: center;
    background-image: url("background.jpg");
    color: #F5E6E8;
    border: 1px solid black;
}

header h1 {
    font-size: 45px;
    margin-top: 0;
}

header p {
    font-size: 18px;
}

p {
    font-size: 16px;
}

h3 {
    font-size: 24px;
}

h4 {
    font-size: 20px;
    margin-bottom: 0;
}

/* Unified table styles */

table {
    border: #967AA1 solid 2px;
}

th {
    background-color: #967AA1;
    font-size: 20px;
    color: #D5C6E0;
}

td {
    border-top: 1px solid #967AA1;
    font-size: 16px;

}

/* Stlying for code blocks */

.code {
    background-color: black;
    color: white;
    font-family: "Space Mono", monospace;
    max-width: 400px;
    border-left: 10px solid black;
    padding-bottom: 2px;
    border-top: .5px solid black;  
}

.code pre {
    font-size: 14px;
    text-align: left;
    white-space: pre-line;
    
}

.indent {
    margin-left: 30px;
}

